--- a/backend/core/utils/email_templates/password_reset.html
+++ b/backend/core/utils/email_templates/password_reset.html
@@ -23,7 +23,7 @@
          <h3 style="margin-bottom: 30px; font-size: 1.25rem; color: #4b5563;">Esqueceu sua Senha?</h3>
       <p style="margin-bottom: 30px;">Você está a um passo de definir uma nova senha para sua conta.</p>
       <a style="display: block; margin: 0 auto; border: none; background-color: #6d28d9; color: white !important; width: 200px; line-height: 24px; padding: 10px; font-size: 24px; border-radius: 10px; cursor: pointer; text-decoration: none; margin: 0 auto; text-align: center;"
-        href="http://localhost:4200/auth/reset-password"
+        href="http://localhost:4200/auth/reset-password/{{token}}"
         target="_blank"
       >
         Redefinir Senha
