--- a/backend/core/utils/email_templates/doctor_rejection.html
+++ b/backend/core/utils/email_templates/doctor_rejection.html
@@ -1,51 +1,247 @@
+<!DOCTYPE html>
 <html>
-<body style="margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, Helvetica, sans-serif;">
-<div style="background: #efefef; border-radius: 10px; padding: 10px; display: flex; align-items: center; justify-content: center;">
-  <div style="margin: 0 auto; width: 90%; text-align: center;">
-
-    <div style="width: 50%; max-width: 42rem; margin-left: auto; margin-right: auto;">
-    <div style="border-radius: 0.5rem; background-color: #ffffff; padding: 1.5rem; box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);">
-        <div style="text-align: center;">
-        <a style="display: inline-flex; align-items: center; justify-content: center; text-decoration: none;">
-            <div style="height:100%; display: flex; height: 3rem; width: 3rem; align-items: center; justify-content: center; border-radius: 0.5rem; background-color: #6d28d9; margin-right: 0.75rem; text-align: center; vertical-align: middle;">
-            <span style="width: 100%; font-size: 1.5rem; font-weight: 700; color: #ffffff; line-height: 3rem; display: inline-block; vertical-align: middle;">P</span>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body
+    style="
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Inter', system-ui, -apple-system, sans-serif;
+      background-color: #f8f8f6;
+    "
+  >
+    <div style="padding: 40px 20px">
+      <div style="max-width: 600px; margin: 0 auto">
+        <!-- Header com Logo -->
+        <div style="text-align: center; margin-bottom: 32px">
+          <div style="display: inline-flex; align-items: center; gap: 12px">
+            <div
+              style="
+                width: 48px;
+                height: 48px;
+                background-color: #1a1a1a;
+                border-radius: 50%;
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+              "
+            >
+              <span style="color: #ffffff; font-size: 24px; font-weight: 600"
+                >P</span
+              >
             </div>
-            <h1 style="font-size: 1.875rem; font-weight: 700; color: #1f2937; margin: 0 auto;">ParkinsonCheck</h1>
-        </a>
+            <h1
+              style="
+                margin: 0;
+                font-size: 28px;
+                font-weight: 600;
+                color: #1a1a1a;
+              "
+            >
+              ParkinsonCheck
+            </h1>
+          </div>
         </div>
 
-        <div style="margin: 30px 0; padding: 20px; background-color: #fee2e2; border-radius: 10px;">
-          <svg style="width: 60px; height: 60px; margin: 0 auto; display: block;" fill="#dc2626" viewBox="0 0 20 20">
-            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd"/>
-          </svg>
-        </div>
-
-        <h3 style="margin-bottom: 20px; font-size: 1.25rem; color: #dc2626;">Atualização de Cadastro</h3>
-        <p style="margin-bottom: 20px; color: #4b5563;">Olá, <strong>{{doctor_name}}</strong>,</p>
-        <p style="margin-bottom: 20px; color: #4b5563;">
-          Informamos que sua solicitação de cadastro não pôde ser aprovada neste momento.
-        </p>
-
-        {% if reason %}
-        <div style="margin: 20px 0; padding: 15px; background-color: #fef3c7; border-left: 4px solid #f59e0b; text-align: left;">
-          <p style="margin: 0; font-weight: 600; color: #78350f;">Motivo:</p>
-          <p style="margin: 5px 0 0 0; color: #78350f;">{{reason}}</p>
-        </div>
-        {% endif %}
-
-        <p style="margin: 30px 0 20px 0; color: #4b5563;">
-          Se você acredita que houve um erro ou deseja mais informações, entre em contato conosco.
-        </p>
-
-        <a style="display: block; margin: 0 auto; border: 2px solid #6d28d9; background-color: #ffffff; color: #6d28d9 !important; width: 200px; line-height: 24px; padding: 10px; font-size: 20px; border-radius: 10px; cursor: pointer; text-decoration: none; text-align: center;"
-          href="mailto:pcheck.noreply@gmail.com"
-          target="_blank"
+        <!-- Card Principal -->
+        <div
+          style="
+            background-color: #ffffff;
+            border-radius: 24px;
+            padding: 48px 32px;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+            border: 1px solid #e8e7e1;
+          "
         >
-          Entrar em Contato
-        </a>
+          <!-- Ícone de Alerta com Background Amarelo -->
+          <div
+            style="
+              background-color: #fff4c4;
+              border-radius: 16px;
+              padding: 32px;
+              text-align: center;
+              margin-bottom: 32px;
+              position: relative;
+              overflow: hidden;
+            "
+          >
+            <!-- Padrão de fundo decorativo - pontos -->
+            <div
+              style="
+                position: absolute;
+                inset: 0;
+                opacity: 0.15;
+                background-image: radial-gradient(
+                  circle,
+                  #e6cf5d 1px,
+                  transparent 1px
+                );
+                background-size: 20px 20px;
+              "
+            ></div>
+
+            <svg
+              style="
+                width: 80px;
+                height: 80px;
+                margin: 0 auto;
+                display: block;
+                position: relative;
+                z-index: 1;
+              "
+              fill="#f59e0b"
+              viewBox="0 0 20 20"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z"
+                clip-rule="evenodd"
+              />
+            </svg>
+          </div>
+
+          <!-- Título -->
+          <h2
+            style="
+              margin: 0 0 24px 0;
+              font-size: 24px;
+              font-weight: 600;
+              color: #1a1a1a;
+              text-align: center;
+            "
+          >
+            Atualização de Cadastro
+          </h2>
+
+          <!-- Saudação -->
+          <p
+            style="
+              margin: 0 0 16px 0;
+              font-size: 16px;
+              color: #1a1a1a;
+              text-align: center;
+            "
+          >
+            Olá, <strong>{{doctor_name}}</strong>,
+          </p>
+
+          <!-- Mensagem Principal -->
+          <p
+            style="
+              margin: 0 0 24px 0;
+              font-size: 14px;
+              color: #4b5563;
+              line-height: 1.6;
+              text-align: center;
+            "
+          >
+            Informamos que sua solicitação de cadastro não pôde ser aprovada
+            neste momento.
+          </p>
+
+          <!-- Box de Motivo (se existir) -->
+          {% if reason %}
+          <div
+            style="
+              background-color: #fff4c4;
+              border: 1px solid #ffe66d;
+              border-left: 4px solid #e6cf5d;
+              border-radius: 12px;
+              padding: 20px;
+              margin-bottom: 24px;
+              text-align: left;
+            "
+          >
+            <p
+              style="
+                margin: 0 0 8px 0;
+                font-size: 14px;
+                font-weight: 600;
+                color: #1a1a1a;
+              "
+            >
+              Motivo:
+            </p>
+            <p
+              style="
+                margin: 0;
+                font-size: 14px;
+                color: #4b5563;
+                line-height: 1.6;
+              "
+            >
+              {{reason}}
+            </p>
+          </div>
+          {% endif %}
+
+          <!-- Badge de Status -->
+          <div style="text-align: center; margin-bottom: 32px">
+            <span
+              style="
+                display: inline-flex;
+                align-items: center;
+                padding: 8px 16px;
+                background-color: #ffe66d;
+                color: #1a1a1a;
+                font-size: 12px;
+                font-weight: 500;
+                border-radius: 999px;
+              "
+            >
+              ⓘ Ação Necessária
+            </span>
+          </div>
+
+          <!-- Mensagem de Suporte -->
+          <p
+            style="
+              margin: 0 0 24px 0;
+              font-size: 14px;
+              color: #4b5563;
+              line-height: 1.6;
+              text-align: center;
+            "
+          >
+            Se você acredita que houve um erro ou deseja mais informações, entre
+            em contato conosco.
+          </p>
+
+          <!-- Botão de Contato -->
+          <div style="text-align: center">
+            <a
+              href="mailto:pcheck.noreply@gmail.com"
+              style="
+                display: inline-block;
+                background-color: #ffffff;
+                border: 2px solid #1a1a1a;
+                color: #1a1a1a;
+                padding: 14px 32px;
+                font-size: 16px;
+                font-weight: 500;
+                border-radius: 999px;
+                text-decoration: none;
+                transition: background-color 0.3s;
+              "
+            >
+              Entrar em Contato
+            </a>
+          </div>
+        </div>
+
+        <!-- Footer -->
+        <div style="margin-top: 32px; text-align: center">
+          <p style="margin: 0 0 8px 0; font-size: 12px; color: #6b7280">
+            Nossa equipe está disponível para ajudar com qualquer dúvida.
+          </p>
+          <p style="margin: 0; font-size: 12px; color: #9ca3af">
+            © 2025 ParkinsonCheck. Todos os direitos reservados.
+          </p>
+        </div>
+      </div>
     </div>
-    </div>
-  </div>
-</div>
-</body>
+  </body>
 </html>
