feat: enhance email templates for doctor status change and password reset

--- a/backend/core/utils/email_templates/password_reset.html
+++ b/backend/core/utils/email_templates/password_reset.html
@@ -1,40 +1,199 @@
+<!DOCTYPE html>
 <html>
-<body style="margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, Helvetica, sans-serif;">
-<div style=" background: #efefef; border-radius: 10px; padding: 10px; display: flex; align-items: center; justify-content: center;">
-  <div style="margin: 0 auto; width: 90%; text-align: center;">
-    
-    <div style="width: 50%; max-width: 42rem; margin-left: auto; margin-right: auto;">
-    <div style="border-radius: 0.5rem; background-color: #ffffff; padding: 1.5rem; box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);">
-        <div style="text-align: center;">
-        <a
-            style="display: inline-flex; align-items: center; justify-content: center; text-decoration: none;"
-        >
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body
+    style="
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Inter', system-ui, -apple-system, sans-serif;
+      background-color: #f8f8f6;
+    "
+  >
+    <div style="padding: 40px 20px">
+      <div style="max-width: 600px; margin: 0 auto">
+        <!-- Header com Logo -->
+        <div style="text-align: center; margin-bottom: 32px">
+          <div style="display: inline-flex; align-items: center; gap: 12px">
             <div
-            style="height:100% ;display: flex; height: 3rem; width: 3rem; align-items: center; justify-content: center; border-radius: 0.5rem; background-color: #6d28d9; margin-right: 0.75rem; text-align: center; vertical-align: middle;"
+              style="
+                width: 48px;
+                height: 48px;
+                background-color: #1a1a1a;
+                border-radius: 50%;
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+              "
             >
-            <span style="width: 100%; font-size: 1.5rem; font-weight: 700; color: #ffffff;  line-height: 3rem; 
-            display: inline-block;
-            vertical-align: middle;">P</span>
+              <span style="color: #ffffff; font-size: 24px; font-weight: 600"
+                >P</span
+              >
             </div>
-            <h1 style="font-size: 1.875rem; font-weight: 700; color: #1f2937; margin: 0 auto;">ParkinsonCheck</h1>
-        </a>
+            <h1
+              style="
+                margin: 0;
+                font-size: 28px;
+                font-weight: 600;
+                color: #1a1a1a;
+              "
+            >
+              ParkinsonCheck
+            </h1>
+          </div>
         </div>
 
-         <h3 style="margin-bottom: 30px; font-size: 1.25rem; color: #4b5563;">Esqueceu sua Senha?</h3>
-      <p style="margin-bottom: 30px;">Você está a um passo de definir uma nova senha para sua conta.</p>
-      <a style="display: block; margin: 0 auto; border: none; background-color: #6d28d9; color: white !important; width: 200px; line-height: 24px; padding: 10px; font-size: 24px; border-radius: 10px; cursor: pointer; text-decoration: none; margin: 0 auto; text-align: center;"
-        href="http://localhost:4200/auth/reset-password/{{token}}"
-        target="_blank"
-      >
-        Redefinir Senha
-      </a>
+        <!-- Card Principal -->
+        <div
+          style="
+            background-color: #ffffff;
+            border-radius: 24px;
+            padding: 48px 32px;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+            border: 1px solid #e8e7e1;
+          "
+        >
+          <!-- Ícone com Background Rosa e Padrão Ondulado -->
+          <div
+            style="
+              background-color: #ffb5e8;
+              border-radius: 16px;
+              padding: 32px;
+              text-align: center;
+              margin-bottom: 32px;
+              position: relative;
+              overflow: hidden;
+            "
+          >
+            <!-- Padrão ondulado decorativo -->
+            <svg
+              style="
+                position: absolute;
+                bottom: 0;
+                right: 0;
+                width: 120px;
+                height: 120px;
+                opacity: 0.25;
+              "
+              viewBox="0 0 200 200"
+            >
+              <path
+                d="M0,100 Q50,50 100,100 T200,100 L200,200 L0,200 Z"
+                fill="#E89FD0"
+              />
+            </svg>
+
+            <!-- Ícone de Chave/Cadeado -->
+            <svg
+              style="
+                width: 80px;
+                height: 80px;
+                margin: 0 auto;
+                display: block;
+                position: relative;
+                z-index: 1;
+              "
+              fill="#ec4899"
+              viewBox="0 0 20 20"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
+                clip-rule="evenodd"
+              />
+            </svg>
+          </div>
+
+          <!-- Título -->
+          <h2
+            style="
+              margin: 0 0 24px 0;
+              font-size: 24px;
+              font-weight: 600;
+              color: #1a1a1a;
+              text-align: center;
+            "
+          >
+            Recuperação de Senha
+          </h2>
+
+          <!-- Mensagem Principal -->
+          <p
+            style="
+              margin: 0 0 16px 0;
+              font-size: 14px;
+              color: #4b5563;
+              line-height: 1.6;
+              text-align: center;
+            "
+          >
+            Você solicitou a redefinição de senha para sua conta.
+          </p>
+
+          <p
+            style="
+              margin: 0 0 32px 0;
+              font-size: 14px;
+              color: #4b5563;
+              line-height: 1.6;
+              text-align: center;
+            "
+          >
+            Clique no botão abaixo para criar uma nova senha de acesso.
+          </p>
+
+          <!-- Badge de Informação -->
+          <div style="text-align: center; margin-bottom: 32px">
+            <span
+              style="
+                display: inline-flex;
+                align-items: center;
+                padding: 8px 16px;
+                background-color: #ffb5e8;
+                color: #1a1a1a;
+                font-size: 12px;
+                font-weight: 500;
+                border-radius: 999px;
+              "
+            >
+              Link válido por 24 horas
+            </span>
+          </div>
+
+          <!-- Botão de Ação -->
+          <div style="text-align: center">
+            <a
+              href="http://localhost:4200/auth/reset-password/{{token}}"
+              style="
+                display: inline-block;
+                background-color: #1a1a1a;
+                color: #ffffff;
+                padding: 14px 32px;
+                font-size: 16px;
+                font-weight: 500;
+                border-radius: 999px;
+                text-decoration: none;
+                transition: background-color 0.3s;
+              "
+            >
+              Redefinir Senha
+            </a>
+          </div>
+        </div>
+
+        <!-- Footer -->
+        <div style="margin-top: 32px; text-align: center">
+          <p style="margin: 0 0 8px 0; font-size: 12px; color: #6b7280">
+            Se você não solicitou esta alteração, ignore este email.
+          </p>
+          <p style="margin: 0; font-size: 12px; color: #9ca3af">
+            © 2025 ParkinsonCheck. Todos os direitos reservados.
+          </p>
+        </div>
+      </div>
     </div>
-
-    </div>
-  </div>
-</div>
-
-
-
-</body>
+  </body>
 </html>
