fix: correct voice test classification inconsistency

--- a/backend/core/utils/email_templates/doctor_status_change.html
+++ b/backend/core/utils/email_templates/doctor_status_change.html
@@ -372,7 +372,7 @@
                 border-radius: 999px;
               "
             >
-              ✓ Aprovado
+              Aprovado
             </span>
             {% elif new_status == 'REJECTED' %}
             <span
@@ -387,7 +387,7 @@
                 border-radius: 999px;
               "
             >
-              ⚠ Rejeitado
+              Rejeitado
             </span>
             {% elif new_status == 'SUSPENDED' %}
             <span
@@ -402,7 +402,7 @@
                 border-radius: 999px;
               "
             >
-              🚫 Suspenso
+              Suspenso
             </span>
             {% elif new_status == 'IN_REVIEW' %}
             <span
@@ -417,7 +417,7 @@
                 border-radius: 999px;
               "
             >
-              🔍 Em Revisão
+              Em Revisão
             </span>
             {% elif new_status == 'PENDING' %}
             <span
@@ -432,7 +432,7 @@
                 border-radius: 999px;
               "
             >
-              ⏱ Pendente
+              Pendente
             </span>
             {% else %}
             <span
